Made changes to the html and css files

--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
 </head>
 <body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <main>
+    <nav>
+      <div class="logo">
+
+      </div>
+
+      <div class="links">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">New</a></li>
+          <li><a href="">Popular</a></li>
+          <li><a href="">Trending</a></li>
+          <li><a href="">Categories</a></li>
+        </ul>
+      </div>
+    </nav>
+
+  </main>
+
+  
+  
+  
+  
+  
 
   The Bright Future of Web 3.0?
 
