--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <nav>
       <div class="logo">
-
+        <img src="./assets/images/logo.svg" alt="">
       </div>
 
       <div class="links">
