--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
 
       <div class="links">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">New</a></li>
-          <li><a href="">Popular</a></li>
-          <li><a href="">Trending</a></li>
-          <li><a href="">Categories</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
         </ul>
       </div>
     </nav>
+
+    <div class="bodyContainer">
+      <div class="firstContainer">
+
+        <div class="box1 box"></div>
+        <div class="box2 box"></div>
+        <div class="box3 box"></div>
+
+      </div>
+
+      <div class="secondContainer">
+
+      </div>
+    </div>
 
   </main>
 
