Made changes to the html and css files

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
 
     <div class="bodyContainer">
       <div class="firstContainer">
-
         <div class="box1 box"></div>
         <div class="box2 box"></div>
         <div class="box3 box"></div>
+        <div class="box4 box"></div>
+        <div class="box5 box"></div>
+        <div class="box6 box"></div>
+
 
       </div>
 
@@ -51,7 +54,7 @@
   
   
 
-  The Bright Future of Web 3.0?
+  <!-- The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
   But is it really fulfilling its promise?
@@ -79,7 +82,7 @@
 
   03
   The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  How the pandemic has sparked fresh opportunities. -->
   
   <footer>
     <div class="attribution">
