Made changes to the files

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <div class="bodyContainer">
       <div class="firstContainer">
         <div class="box1 box"></div>
-        <div class="box2 box"></div>
+        <div class="box2 box">
+          <h1> The Bright Future of Web 3.0?</h1>
+        </div>
         <div class="box3 box"></div>
       </div>
 
@@ -49,7 +51,7 @@
   
   
 
-  <!-- The Bright Future of Web 3.0?
+  <!-- 
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
   But is it really fulfilling its promise?
